--- a/.github/workflows/agent-hygiene.yml
+++ b/.github/workflows/agent-hygiene.yml
@@ -28,4 +28,4 @@ jobs:
         run: command -v rg >/dev/null 2>&1 || (sudo apt-get update && sudo apt-get install -y ripgrep)
 
       - name: Run hygiene checks
-        run: bash scripts/agent-hygiene-check.sh
+        run: bash scripts/agent-hygiene-check.sh --mode template
