--- a/.github/workflows/agent-hygiene.yml
+++ b/.github/workflows/agent-hygiene.yml
@@ -25,7 +25,21 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Ensure ripgrep
-        run: command -v rg >/dev/null 2>&1 || (sudo apt-get update && sudo apt-get install -y ripgrep)
+        run: |
+          if command -v rg >/dev/null 2>&1; then
+            exit 0
+          fi
+          if command -v apt-get >/dev/null 2>&1; then
+            sudo apt-get update
+            sudo apt-get install -y ripgrep
+            exit 0
+          fi
+          if command -v brew >/dev/null 2>&1; then
+            brew install ripgrep
+            exit 0
+          fi
+          echo "ERROR: ripgrep is required but no supported package manager was found."
+          exit 1
 
       - name: Run hygiene checks
         run: bash scripts/agent-hygiene-check.sh
