--- a/.github/workflows/agent-hygiene.yml
+++ b/.github/workflows/agent-hygiene.yml
@@ -41,5 +41,25 @@ jobs:
           echo "ERROR: ripgrep is required but no supported package manager was found."
           exit 1
 
+      - name: Ensure shellcheck
+        run: |
+          if command -v shellcheck >/dev/null 2>&1; then
+            exit 0
+          fi
+          if command -v apt-get >/dev/null 2>&1; then
+            sudo apt-get update
+            sudo apt-get install -y shellcheck
+            exit 0
+          fi
+          if command -v brew >/dev/null 2>&1; then
+            brew install shellcheck
+            exit 0
+          fi
+          echo "ERROR: shellcheck is required but no supported package manager was found."
+          exit 1
+
+      - name: Lint shell scripts
+        run: shellcheck scripts/*.sh
+
       - name: Run hygiene checks
         run: bash scripts/agent-hygiene-check.sh
